fix: images path

--- a/src/app/[locale]/work/projects/en/lil-gnars-02.mdx
+++ b/src/app/[locale]/work/projects/en/lil-gnars-02.mdx
@@ -3,10 +3,10 @@ title: "Lil Gnars 02"
 publishedAt: "2024-04-08"
 summary: "Lil Gnars 02 summary"
 images:
-  - "/images/projects/project-02/image-01.jpeg"
-  - "/images/projects/project-02/image-02.jpeg"
-  - "/images/projects/project-02/image-03.jpeg"
-  - "/images/projects/project-02/image-04.jpeg"
+  - "/images/projects/project-02/image-01.jpg"
+  - "/images/projects/project-02/image-02.jpg"
+  - "/images/projects/project-02/image-03.jpg"
+  - "/images/projects/project-02/image-04.jpg"
 team:
   - name: "BeagleXV"
     role: "Skate Instructor"
