--- a/src/app/[locale]/work/projects/br/lil-gnars-03.mdx
+++ b/src/app/[locale]/work/projects/br/lil-gnars-03.mdx
@@ -4,9 +4,9 @@ publishedAt: "2024-04-08"
 summary: "Lil Gnars 03 - ultimo dia summary..."
 images:
   - "/images/projects/project-03/video-01.mp4"
-  - "/images/projects/project-03/image-01.jpeg"
-  - "/images/projects/project-03/image-03.jpeg"
-  - "/images/projects/project-03/image-04.jpeg"
+  - "/images/projects/project-03/image-01.jpg"
+  - "/images/projects/project-03/image-03.jpg"
+  - "/images/projects/project-03/image-04.jpg"
 team:
   - name: "BeagleXV"
     role: "Skate Instructor"
