--- a/src/app/[locale]/work/projects/en/lil-gnars-01.mdx
+++ b/src/app/[locale]/work/projects/en/lil-gnars-01.mdx
@@ -3,10 +3,10 @@ title: "Lil Gnars 01"
 publishedAt: "2024-04-08"
 summary: "Lil Gnars 01 summary"
 images:
-  - "/images/projects/project-01/image-01.jpeg"
-  - "/images/projects/project-01/image-02.jpeg"
-  - "/images/projects/project-01/image-03.jpeg"
-  - "/images/projects/project-01/image-04.jpeg"
+  - "/images/projects/project-01/image-01.jpg"
+  - "/images/projects/project-01/image-02.jpg"
+  - "/images/projects/project-01/image-03.jpg"
+  - "/images/projects/project-01/image-04.jpg"
 team:
   - name: "BeagleXV"
     role: "Skate Instructor"
