--- a/src/app/[locale]/work/projects/br/lil-gnars-01.mdx
+++ b/src/app/[locale]/work/projects/br/lil-gnars-01.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Lil Gnars 01"
 publishedAt: "2024-04-08"
-summary: "Lil Gnars 01 summary"
+summary: "We kicked off a class at one of Rio’s popular skate spots, introducing kids to the fundamentals and getting them on their boards for the first time. Every skater left with new skills and a full lunch."
 images:
   - "/images/projects/project-01/image-01.jpg"
   - "/images/projects/project-01/image-02.jpg"
@@ -22,28 +22,20 @@ team:
     linkedIn: "https://warpcast.com/defon"
 ---
 
-## Overview
+# Lil Gnars in Action!
 
-In this project, ...
+Here’s a look at some of our recent events that brought smiles, new friendships, and awesome skate sessions to kids:
 
-## Key Features
+## Rio de Janeiro Skate Class
 
-- **Key 1**: Built a...
-- **Key 2**: Integrated a ...
-- **Key 3**: Collaborated closely with ...
-- **Key 4**: Developed comprehensive ...
+We kicked off a class at one of Rio’s popular skate spots, introducing kids to the fundamentals and getting them on their boards for the first time. Every skater left with new skills and a full lunch.
 
-## Results
+## Rita Lee Park Session
 
-- **Result 1**: Achived ...
-- **Result 2**: Achived ...
-- **Result 3**: Achived ...
-- **Result 4**: Achived ...
+An exciting session at Rita Lee Park brought together kids from the area to skate, learn, and grow in confidence. It was all about community, connection, and carving those first lines—plus, every kid enjoyed a well-deserved lunch to power through the day.
 
-## Challenges and Learnings
+## BBQ and Skate Bash
 
-One key challenge was ... Learning ....
+Our biggest event yet! We wrapped up an epic skate class with a BBQ, inviting kids and families to join in. It was all about having fun, sharing food, and celebrating the progress of our young skaters.
 
-## Conclusion
-
-The Lil Gnars Day was ....
+We’re just getting started! Stay tuned for future events, and come be a part of our next Lil Gnars adventure.
