--- a/src/app/[locale]/work/projects/en/lil-gnars-02.mdx
+++ b/src/app/[locale]/work/projects/en/lil-gnars-02.mdx
@@ -3,8 +3,8 @@ title: "Lil Gnars 02"
 publishedAt: "2024-04-08"
 summary: "An exciting session at Rita Lee Park brought together kids from the area to skate, learn, and grow in confidence. It was all about community, connection, and carving those first lines—plus, every kid enjoyed a well-deserved lunch to power through the day."
 images:
-  - "/images/gallery/lilgnars-05.jpg"
-  - "/images/gallery/lilgnars-06.jpg"
+  - "/images/gallery/lilgnars-05.png"
+  - "/images/gallery/lilgnars-06.jpeg"
   - "/images/gallery/lilgnars-07.jpg"
   - "/images/gallery/lilgnars-08.jpg"
 team:
