--- a/src/app/[locale]/work/projects/en/lil-gnars-03.mdx
+++ b/src/app/[locale]/work/projects/en/lil-gnars-03.mdx
@@ -3,10 +3,10 @@ title: "Lil Gnars 03"
 publishedAt: "2024-04-08"
 summary: "Our biggest event yet! We wrapped up an epic skate class with a BBQ, inviting kids and families to join in. It was all about having fun, sharing food, and celebrating the progress of our young skaters."
 images:
-  - "/images/projects/project-03/video-01.mp4"
-  - "/images/projects/project-03/image-01.jpg"
-  - "/images/projects/project-03/image-03.jpg"
-  - "/images/projects/project-03/image-04.jpg"
+  - "/images/gallery/lilgnars-09.jpeg"
+  - "/images/gallery/lilgnars-10.jpeg"
+  - "/images/gallery/lilgnars-11.jpeg"
+  - "/images/gallery/lilgnars-12.jpg"
 team:
   - name: "BeagleXV"
     role: "Skate Instructor"
