Translate about-lil-gnars to PT-BR

--- a/src/app/[locale]/blog/posts/br/about-lil-gnars.mdx
+++ b/src/app/[locale]/blog/posts/br/about-lil-gnars.mdx
@@ -4,13 +4,13 @@ publishedAt: "2024-03-05"
 summary: "At Lil Gnars, we’re here to break boundaries and bring skateboarding to kids from all walks of life. Our mission? To inspire young skaters, offer free classes, and provide opportunities for every child to learn, grow, and skate with heart. Through skate, we’re building a supportive community where kids gain confidence, make friends, and discover the thrill of the ride."
 ---
 
-# About Lil Gnars
+# Sobre Lil Gnars
 
-At Lil Gnars, we’re here to break boundaries and bring skateboarding to kids from all walks of life. Our mission? To inspire young skaters, offer free classes, and provide opportunities for every child to learn, grow, and skate with heart. Through skate, we’re building a supportive community where kids gain confidence, make friends, and discover the thrill of the ride.
+Na Lil Gnars, estamos aqui para quebrar barreiras e levar o skate para crianças de todas as origens. Nossa missão? Inspirar jovens skatistas, oferecer aulas gratuitas e proporcionar oportunidades para que toda criança aprenda, evolua e ande de skate com o coração. Através do skate, estamos construindo uma comunidade acolhedora onde crianças ganham confiança, fazem amigos e descobrem a emoção da jornada.
 
-With each class, kids not only learn skills on the board but also earn rewards like a chance to win their own skateboard, thanks to the support of our amazing partners. We also make sure every kid gets a full lunch to fuel their energy, so they can focus on what matters: having fun and learning something new.
+A cada aula, as crianças não apenas aprendem habilidades no skate, mas também têm a chance de ganhar prêmios, como seu próprio skate, graças ao apoio dos nossos incríveis parceiros. Além disso, garantimos que cada criança receba um almoço completo para recarregar suas energias, para que possam focar no que realmente importa: se divertir e aprender algo novo.
 
-# Join the Movement:
 
-Whether you’re a parent, skate enthusiast, or someone who believes in helping kids dream big, there’s a place for you in the Lil Gnars family. Buy a pass, mint an NFT, or make a donation to support our mission.
+# Junte-se ao Movimento:
 
+Sejam vocês pais, entusiastas do skate ou alguém que acredita em ajudar crianças a sonhar grande, há um lugar para você na família Lil Gnars. Compre um passe, faça o mint de um NFT ou contribua com uma doação para apoiar nossa missão.
